--- a/meson.build
+++ b/meson.build
@@ -71,6 +71,7 @@ endif
 gl_deps = [
     dependency('gio-unix-2.0', version : '>=2.43.90'),
     dependency('gtk+-3.0', version : '>=3.22.0'),
+    dependency('libhandy-1', version : '>=1.1.0'),
     dependency('libsystemd')
 ]
 
